# spotify-data-project

./: .gitignore  00_twitter_api.ipynb  01_sentiment-v1.ipynb  01_sentiment.ipynb  02_analysis.ipynb  README.md  notes.txt  pyproject.toml
