[project]
name = "spotify-data-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.1.1",
    "dill>=0.4.0",
    "evaluate>=0.4.6",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.2",
    "plotly>=6.3.1",
    "python-dotenv>=1.1.1",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "transformers>=4.56.0",
    "tweepy>=4.16.0",
    "wordcloud>=1.9.4",
]
